# qzy-environmental-monitoring

src/components/: Cargo.toml
src/components/src/: lib.rs
src/components/src/tableview/: mod.rs
src/components/src/widgets/: mod.rs
src/components/ui/dividing_line/: dividing_line.slint
src/components/ui/menu/: menu.slint  menu_area.slint
src/components/ui/tableview/: tableview.slint
src/config_ui/: Cargo.toml  build.rs
src/config_ui/qt/examples/003-menubar/: mainwindow.ui
src/config_ui/qt/examples/004-load-image/: 004-load-image.pro  example_resource.qrc  mainwindow.cpp  mainwindow.ui
src/config_ui/qt/src/config/: CMakeLists.txt  config.pro  images.qrc  main.cpp  welcome.cpp  welcome.h  welcome.ui
src/config_ui/qt/src/config_cmake/: main.cpp  mainwindow.cpp  mainwindow.h
src/config_ui/src/: lib.rs  main.rs
src/config_ui/src/ui/: device.rs  mod.rs  other_page.rs
src/config_ui/timer_dialogs/: edit.slint
src/config_ui/ui/: .gitignore  alarm.slint  dataquery_tablereport.slint  device.slint  device_channel_config.slint  device_edit.slint  first_page.slint  main.slint  measurement_factors.slint  other.slint  serial_port.slint  switching_factors.slint  systask.slint  testmain.slint  timer.slint  variant_edit.slint
src/config_ui/ui/alarm_tags/: alarm_code.slint  alarm_group.slint  alarm_level.slint  alarm_source.slint
src/config_ui/ui/alarm_tags/alarm_code_dialogs/: edit.slint
src/config_ui/ui/common/: add_del_update.slint  ok_cancel.slint  pane.slint
src/config_ui/ui/dataquery_tablereport_dialogs/: add_group.slint  del_group.slint
src/config_ui/ui/device_edit_dialogs/: device_channel_config.slint  month_plan.slint  timer.slint
src/config_ui/ui/serial_port_dialogs/: setting.slint
src/config_ui/ui/systask_tags/: atomic.slint  operator_edit.slint  process.slint  sysmode.slint
src/config_ui/ui/timer_dialogs/: edit.slint
src/config_ui/ui/variant_edit_dialogs/: basic_entries.slint
src/examples/menu_example/: Cargo.toml  build.rs
src/examples/menu_example/src/: main.rs
src/examples/tableview_example/: Cargo.toml  build.rs
src/examples/tableview_example/src/: main.rs
(+198 files in other folders)
