[package]
name = "config_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { git = "https://github.com/slint-ui/slint" }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint" }
