[package]
name = "tableview_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.2"
# slint = { git = "https://github.com/slint-ui/slint" }

[build-dependencies]
slint-build = "0.2"
# slint-build = { git = "https://github.com/slint-ui/slint" }
